--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "ng-redux": "^4.1.0",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
+    "redux-observable": "^1.0.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "^0.8.29"
